fix a bug where the logo caused an extra white space on the bottom of the page

--- a/django-jewels/wheelie/client/scss/layout/_error.scss
+++ b/django-jewels/wheelie/client/scss/layout/_error.scss
@@ -24,6 +24,7 @@
 .error-logo {
   height: 100%;
   left: 1.5%;
+  max-height: 150px;
   position: absolute;
   top: 2.25%;
   width: 12.5%;
